@@ -7,6 +7,7 @@ v0.08
 	* FIX : slightly change default way width
 	* FIX : undo/redo handling for manipulating tags
 	* ADD : ability to draw icons on specific trackpoints
+	* ADD : draw parking symbol from mapnik
 	
 v0.07 18 aug 2007
 	* ADD : nice mappaint mechanism
